# fleetpulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: quality.yml
agent/: Dockerfile
docs/: risk-register.md
docs/adr/: 0001-local-first-and-isolated.md  0002-postgres-outbox-and-redis-streams.md  0003-ai-is-optional-and-non-executing.md  0004-immutable-supply-chain-gates.md
docs/architecture/: phase-7-drill-plan.md  phase-8-assistant.md  repository-boundary.md  system.md
docs/postmortems/: 20260717-redis-outage-drill.md  template.md
docs/runbooks/: assistant.md  controlled-failure-drills.md  local-compose.md  local-kubernetes.md  performance-testing.md  redis-streams.md  supply-chain.md  threshold-incident.md
docs/security/: threat-model.md
docs/slos/: fleetpulse.md
evaluations/: assistant_golden.json
evidence/: INDEX.md  README.md  claims.yaml
evidence/templates/: run-metadata.json
load/k6/: fleetpulse.js
migrations/: env.py
migrations/versions/: 20260717_0001_phase1.py  20260717_0002_phase2.py
nginx/: nginx.conf
observability/alertmanager/: alertmanager.yml
observability/prometheus/: prometheus.yml
scripts/: generate_local_tls.sh  phase1_smoke.py  phase2_smoke.py
scripts/ci/: clean_clone_gate.sh
scripts/k8s/: apply_runtime_secrets.sh  build_images.sh  k3d_up.sh  kind_up.sh
scripts/security/: build_images.sh  scan_images.sh  static_gate.sh
security/: tool-images.env
services/api/: Dockerfile
services/assistant/: Dockerfile
services/outbox_relay/: Dockerfile
services/worker/: Dockerfile
src/fleetpulse/: __init__.py  logging.py  metrics.py  queueing.py  telemetry.py
tests/: __init__.py  test_agent.py  test_api.py  test_assistant.py  test_performance.py  test_phase9.py  test_queueing.py  test_reliability.py  test_repository_contract.py  test_telemetry.py
tools/: __init__.py  assistant_accuracy.py  ci_contract.py  evidence_claims.py  kubernetes_contract.py  performance_runner.py  reliability_runner.py  repository_contract.py  supply_chain_report.py
(+188 files in other folders)
