[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "fleetpulse"
version = "0.1.0"
description = "Local-first Linux fleet reliability and incident-response platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FleetPulse contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fleetpulse_project"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tools", "tests"]
